# GxEngine4

./: CMakeLists.txt  build.sh  main.cpp  main.h  setting.json
docs/: PROJECT_STRUCTURE.md  README_BUILD.md  README_MACOS.md  USER_GUIDE.md  VCPKG_SETUP.md
src/: scene.cpp  scene.h
src/ads/: StubAdProvider.cpp  StubAdProvider.h
src/animation/: AnimationManager.cpp  AnimationManager.h  Animator.cpp  Animator.h
src/data/: userDataManager.cpp  userDataManager.h
src/rendering/: ImageRenderer.cpp  ImageRenderer.h  TextRenderer.cpp  TextRenderer.h
src/resource/: resourceManager.cpp  resourceManager.h
src/scripting/: luaScriptExecutor.cpp  luaScriptExecutor.h  scriptManager.cpp  scriptManager.h
src/ui/: uiManager.cpp  uiManager.h
src/utils/: FileIO.cpp  FileIO.h  logger.cpp  logger.h  platform_config.h  sdl_includes.h
src/widgets/: UIWidget.cpp  UIWidget.h  WidgetManager.cpp  WidgetManager.h
src/widgets/basic/: BackgroundTextWidget.cpp  BackgroundTextWidget.h  BackgroundWidget.cpp  BackgroundWidget.h  ButtonWidget.cpp  ButtonWidget.h  EditTextWidget.cpp  EditTextWidget.h  TextWidget.cpp  TextWidget.h
src/widgets/dialog/: CustomDialogWidget.cpp  CustomDialogWidget.h  StandardDialogWidget.cpp  StandardDialogWidget.h  ToastWidget.cpp  ToastWidget.h
src/widgets/list/: BannerListWidget.cpp  BannerListWidget.h  ChatListWidget.cpp  ChatListWidget.h  MultiTypeListWidget.cpp  MultiTypeListWidget.h  SectionGridWidget.cpp  SectionGridWidget.h  TextListWidget.cpp  TextListWidget.h  UpgradeListWidget.cpp  UpgradeListWidget.h  VerticalGridWidget.cpp  VerticalGridWidget.h
src/widgets/rpg/: TilemapWidget.cpp  TilemapWidget.h
